--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-cli</artifactId>
+            <version>0.14</version>
+        </dependency>
     </dependencies>
 
     <properties>
